@@ -2,7 +2,7 @@ sg3-utils (1.26-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Doug Gilbert <dgilbert@interlog.com>  Wed, 07 Nov 2007 08:00:00 -0500
+ -- Doug Gilbert <dgilbert@interlog.com>  Thu, 15 Nov 2007 08:00:00 -0500
 
 sg3-utils (1.25-0.1) unstable; urgency=low
 
